add simplified nk energy matching uipc

--- a/src/polyfem/assembler/CMakeLists.txt
+++ b/src/polyfem/assembler/CMakeLists.txt
@@ -52,6 +52,8 @@ set(SOURCES
 	NeoHookeanElasticity.hpp
 	NeoHookeanElasticityAutodiff.cpp
 	NeoHookeanElasticityAutodiff.hpp
+  SimplifiedNeoHookeanElasticityAutodiff.cpp
+	SimplifiedNeoHookeanElasticityAutodiff.hpp
 	OgdenElasticity.cpp
 	OgdenElasticity.hpp
 	OgdenElasticity.tpp
