initial rescaling implementation

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,30 @@ scripts/*.txt
 scripts/*.json
 /.vs
 /CMakeSettings.json
+trash-compactor/** 
+mat-twist/** 
+one-thread-comparison/**
+large-stiffness-ratio/**
+rod-twist/**
+iteration-tracking/** 
+pin-cushion-ball/**
+dolphin-funnel/**
+golf-ball/** 
+plot.py
+run.py
+clean-examples/**
+trash-compactor-octocat/**
+two-mats/**
+poster-workspace/**
+spd-analysis/**
+mfem-ex2/**
+trash-compactor-octocat-orig/**
+squished-beam/**
+two-blocks/** 
+iron/**
+adhesion/**
+stokes/**
+higher-order/**
+laplace/**
+ratios/**
+new-build/**
