--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,12 +178,11 @@ if(WIN32)
     target_link_libraries(polyfem PUBLIC Eigen3::Eigen)
 endif()
 
-target_compile_definitions(polyfem PUBLIC H5PP_USE_EIGEN3)
-add_subdirectory(patched/h5pp)
+# target_compile_definitions(polyfem PUBLIC H5PP_USE_EIGEN3)
+# add_subdirectory(patched/h5pp)
 
 # polysolve
-# include(polysolve)
-add_subdirectory(patched/polysolve)
+include(polysolve)
 target_link_libraries(polyfem PUBLIC polysolve::polysolve)
 
 # libigl
@@ -197,8 +196,7 @@ if(NOT WIN32)
 endif()
 
 # IPC Toolkit
-# include(ipc_toolkit)
-add_subdirectory(patched/ipc-toolkit)
+include(ipc_toolkit)
 target_link_libraries(polyfem PUBLIC ipc::toolkit)
 
 # Threading
@@ -242,13 +240,11 @@ include(nanospline)
 target_link_libraries(polyfem PUBLIC nanospline)
 
 # Geogram
-# include(geogram)
-add_subdirectory(patched/geogram)
+include(geogram)
 target_link_libraries(polyfem PUBLIC geogram)
 
 # paraviewo (includes HDF5 and h5pp)
-# include(paraviewo)
-add_subdirectory(patched/paraviewo)
+include(paraviewo)
 target_link_libraries(polyfem PUBLIC paraviewo::paraviewo)
 
 # Jacobian
@@ -300,8 +296,7 @@ endif()
 # wmtk library
 # Include lagrange first to fetch a newer version than
 # what is used in the toolkit.
-# include(lagrange)
-add_subdirectory(patched/lagrange)
+include(lagrange)
 include(wmtk)
 target_link_libraries(polyfem PUBLIC wmtk::toolkit)
 
